--- a/tests/notebooks/tests/textcat.ipynb
+++ b/tests/notebooks/tests/textcat.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import csv\n",
     "import random\n",
     "from math import log\n",
@@ -15,9 +16,12 @@
     "from spacy.util import minibatch, decaying, compounding\n",
     "\n",
     "use_titles = True\n",
-    "do_clean_text = True\n",
+    "do_clean_text = False\n",
     "model = 'en_core_web_sm'\n",
-    "#model = 'en_core_web_lg'\n",
+    "\n",
+    "n_iter=20\n",
+    "drop=0.3\n",
+    "score_treshold=0.7\n",
     "\n",
     "fp_texts = []\n",
     "fn_texts = []"
@@ -137,7 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(nlp, texts, labels, split=0.8, n_iter=20):\n",
+    "def train(nlp, texts, labels, split=0.8, n_iter=n_iter):\n",
     "    \n",
     "    # add the text classifier to the pipeline if it doesn't exist\n",
     "    # nlp.create_pipe works for built-ins that are registered with spaCy\n",
@@ -185,7 +189,7 @@
     "            #for batch in minibatch(train_data, size=compounding(16., 128., 1.01)):\n",
     "            for batch in minibatch(train_data, size=128):\n",
     "                texts, annotations = zip(*batch)\n",
-    "                nlp.update(texts, annotations, sgd=optimizer, losses=losses, drop=0.3)\n",
+    "                nlp.update(texts, annotations, sgd=optimizer, losses=losses, drop=drop)\n",
     "            with textcat.model.use_params(optimizer.averages):\n",
     "                # evaluate on the dev data split off in load_data()\n",
     "                scores = evaluate(nlp.tokenizer, textcat, dev_texts, dev_cats)\n",
@@ -205,14 +209,14 @@
     "        for label, score in doc.cats.items():\n",
     "            if label not in gold:\n",
     "                continue\n",
-    "            if score >= 0.8 and gold[label] >= 0.5:\n",
+    "            if score >= score_treshold and gold[label] >= 0.5:\n",
     "                tp += 1.\n",
-    "            elif score >= 0.8 and gold[label] < 0.5:\n",
+    "            elif score >= score_treshold and gold[label] < 0.5:\n",
     "                fp += 1.\n",
     "                fp_texts.append((label, texts[i]))\n",
-    "            elif score < 0.8 and gold[label] < 0.5:\n",
+    "            elif score < score_treshold and gold[label] < 0.5:\n",
     "                tn += 1\n",
-    "            elif score < 0.8 and gold[label] >= 0.5:\n",
+    "            elif score < score_treshold and gold[label] >= 0.5:\n",
     "                fn += 1\n",
     "                fn_texts.append((label, texts[i]))\n",
     "    precision = tp / (tp + fp)\n",
@@ -230,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -241,35 +245,10 @@
       "\n",
       "loading data from '../../../data/lapd.labeled'...\n",
       "\n",
-      "cleaning texts...\n",
-      "clean texts completed.\n",
-      "\n",
-      "Using 4879 examples (3903 training, 976 evaluation)\n",
+      "Using 13320 examples (10656 training, 2664 evaluation)\n",
       "Warning: Unnamed vectors -- this won't allow multiple vectors models to be loaded. (Shape: (0, 0))\n",
       "Training the model...\n",
-      "LOSS \t  P  \t  R  \t  F  \n",
-      "153.868\t0.233\t0.661\t0.344\n",
-      "56.401\t0.326\t0.616\t0.426\n",
-      "41.928\t0.802\t0.578\t0.672\n",
-      "16.774\t0.925\t0.500\t0.649\n",
-      "14.877\t0.951\t0.506\t0.661\n",
-      "13.817\t0.959\t0.516\t0.671\n",
-      "13.369\t0.971\t0.526\t0.682\n",
-      "12.617\t0.974\t0.538\t0.693\n",
-      "11.785\t0.979\t0.545\t0.700\n",
-      "10.997\t0.982\t0.587\t0.735\n",
-      "10.231\t0.987\t0.639\t0.776\n",
-      "9.684\t0.989\t0.680\t0.806\n",
-      "9.149\t0.990\t0.698\t0.819\n",
-      "8.499\t0.992\t0.708\t0.826\n",
-      "7.641\t0.997\t0.735\t0.846\n",
-      "7.154\t0.997\t0.758\t0.862\n",
-      "6.890\t0.997\t0.761\t0.864\n",
-      "6.737\t0.994\t0.765\t0.865\n",
-      "6.773\t0.988\t0.778\t0.870\n",
-      "6.481\t0.988\t0.777\t0.870\n",
-      "\n",
-      "Done.\n"
+      "LOSS \t  P  \t  R  \t  F  \n"
      ]
     }
    ],
@@ -285,11 +264,13 @@
     "    texts = []\n",
     "    labels = []\n",
     "    #for year in ['2018']:\n",
-    "    for year in ['2010', '2011', '2012', '2013', '2014', '2015', '2016', '2018']:\n",
-    "    #for year in ['1999', '2000', '2001', '2002', '2003', '2004', '2005', '2006', '2007', '2008', '2009', '2010', '2011', '2012', '2013', '2014', '2015', '2017', '2018']:\n",
-    "        t, l = load_data(data_dir / 'lapd_news_{}.csv'.format(year))\n",
-    "        texts = texts + t   # array concatination\n",
-    "        labels = labels + l # array concatination\n",
+    "    #for year in ['2010', '2011', '2012', '2013', '2014', '2015', '2016', '2017', '2018']:\n",
+    "    for year in ['1999', '2000', '2001', '2002', '2003', '2004', '2005', '2006', '2007', '2008', '2009', '2010', '2011', '2012', '2013', '2014', '2015', '2016', '2017', '2018']:\n",
+    "        csv_path = data_dir / 'lapd_news_{}.csv'.format(year)\n",
+    "        if csv_path.exists():\n",
+    "            t, l = load_data(csv_path)\n",
+    "            texts = texts + t   # array concatination\n",
+    "            labels = labels + l # array concatination\n",
     "    \n",
     "    if do_clean_text:\n",
     "        print()\n",
@@ -319,7 +300,7 @@
     "    with open(fp_csv, 'w') as _file:\n",
     "        writer = csv.writer(_file)\n",
     "        writer.writerow(['label', 'text'])\n",
-    "        for t in fp_texts:\n",
+    "        for t in set(fp_texts):\n",
     "            writer.writerow([t[0], t[1]])\n",
     "    \n",
     "    # FN TEXTS\n",
@@ -327,7 +308,7 @@
     "    with open(fn_csv, 'w') as _file:\n",
     "        writer = csv.writer(_file)\n",
     "        writer.writerow(['label', 'text'])\n",
-    "        for t in fn_texts:\n",
+    "        for t in set(fn_texts):\n",
     "            writer.writerow([t[0], t[1]])\n",
     "\n",
     "main()"
