--- a/tests/notebooks/tests/textcat.ipynb
+++ b/tests/notebooks/tests/textcat.ipynb
@@ -16,10 +16,10 @@
     "from spacy.util import minibatch, decaying, compounding\n",
     "\n",
     "use_titles = True\n",
-    "do_clean_text = False\n",
+    "do_clean_text = True\n",
     "model = 'en_core_web_sm'\n",
     "\n",
-    "n_iter=20\n",
+    "n_iter=30\n",
     "drop=0.3\n",
     "score_treshold=0.7\n",
     "\n",
@@ -29,7 +29,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Load data"
    ]
@@ -37,7 +39,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def load_data(path):\n",
@@ -192,13 +196,13 @@
     "                nlp.update(texts, annotations, sgd=optimizer, losses=losses, drop=drop)\n",
     "            with textcat.model.use_params(optimizer.averages):\n",
     "                # evaluate on the dev data split off in load_data()\n",
-    "                scores = evaluate(nlp.tokenizer, textcat, dev_texts, dev_cats)\n",
+    "                scores = evaluate(nlp.tokenizer, textcat, dev_texts, dev_cats, i+1 == n_iter)\n",
     "\n",
     "            print('{0:.3f}\\t{1:.3f}\\t{2:.3f}\\t{3:.3f}'  # print a simple table\n",
     "                  .format(losses['textcat'], scores['textcat_p'],\n",
     "                          scores['textcat_r'], scores['textcat_f']))\n",
     "\n",
-    "def evaluate(tokenizer, textcat, texts, cats):\n",
+    "def evaluate(tokenizer, textcat, texts, cats, do_fp_fn):\n",
     "    docs = (tokenizer(text) for text in texts)\n",
     "    tp = 1e-8  # True positives\n",
     "    fp = 1e-8  # False positives\n",
@@ -213,12 +217,14 @@
     "                tp += 1.\n",
     "            elif score >= score_treshold and gold[label] < 0.5:\n",
     "                fp += 1.\n",
-    "                fp_texts.append((label, texts[i]))\n",
+    "                if do_fp_fn:\n",
+    "                    fp_texts.append((label, texts[i]))\n",
     "            elif score < score_treshold and gold[label] < 0.5:\n",
     "                tn += 1\n",
     "            elif score < score_treshold and gold[label] >= 0.5:\n",
     "                fn += 1\n",
-    "                fn_texts.append((label, texts[i]))\n",
+    "                if do_fp_fn:\n",
+    "                    fn_texts.append((label, texts[i]))\n",
     "    precision = tp / (tp + fp)\n",
     "    recall = tp / (tp + fn)\n",
     "    f_score = 2 * (precision * recall) / (precision + recall)\n",
@@ -234,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -245,10 +251,45 @@
       "\n",
       "loading data from '../../../data/lapd.labeled'...\n",
       "\n",
-      "Using 13320 examples (10656 training, 2664 evaluation)\n",
+      "cleaning texts...\n",
+      "clean texts completed.\n",
+      "\n",
+      "Using 4879 examples (3903 training, 976 evaluation)\n",
       "Warning: Unnamed vectors -- this won't allow multiple vectors models to be loaded. (Shape: (0, 0))\n",
       "Training the model...\n",
-      "LOSS \t  P  \t  R  \t  F  \n"
+      "LOSS \t  P  \t  R  \t  F  \n",
+      "135.488\t0.657\t0.632\t0.644\n",
+      "20.672\t0.657\t0.632\t0.644\n",
+      "19.160\t0.707\t0.627\t0.665\n",
+      "16.524\t0.930\t0.593\t0.724\n",
+      "14.716\t0.955\t0.579\t0.721\n",
+      "13.999\t0.968\t0.592\t0.735\n",
+      "13.485\t0.973\t0.596\t0.739\n",
+      "12.556\t0.975\t0.614\t0.753\n",
+      "11.858\t0.978\t0.654\t0.784\n",
+      "11.258\t0.981\t0.663\t0.791\n",
+      "10.608\t0.988\t0.664\t0.794\n",
+      "9.431\t0.989\t0.720\t0.834\n",
+      "8.880\t0.989\t0.734\t0.843\n",
+      "8.648\t0.988\t0.734\t0.842\n",
+      "8.536\t0.988\t0.735\t0.843\n",
+      "8.405\t0.988\t0.735\t0.843\n",
+      "8.301\t0.988\t0.736\t0.844\n",
+      "8.369\t0.989\t0.735\t0.843\n",
+      "8.311\t0.989\t0.735\t0.843\n",
+      "8.184\t0.988\t0.736\t0.844\n",
+      "8.182\t0.989\t0.736\t0.844\n",
+      "8.086\t0.991\t0.735\t0.844\n",
+      "8.195\t0.991\t0.735\t0.844\n",
+      "8.108\t0.992\t0.735\t0.844\n",
+      "8.100\t0.992\t0.735\t0.844\n",
+      "8.071\t0.992\t0.735\t0.844\n",
+      "8.059\t0.992\t0.735\t0.844\n",
+      "8.073\t0.992\t0.735\t0.844\n",
+      "8.076\t0.992\t0.735\t0.844\n",
+      "8.064\t0.992\t0.735\t0.844\n",
+      "\n",
+      "Done.\n"
      ]
     }
    ],
@@ -264,8 +305,8 @@
     "    texts = []\n",
     "    labels = []\n",
     "    #for year in ['2018']:\n",
-    "    #for year in ['2010', '2011', '2012', '2013', '2014', '2015', '2016', '2017', '2018']:\n",
-    "    for year in ['1999', '2000', '2001', '2002', '2003', '2004', '2005', '2006', '2007', '2008', '2009', '2010', '2011', '2012', '2013', '2014', '2015', '2016', '2017', '2018']:\n",
+    "    for year in ['2010', '2011', '2012', '2013', '2014', '2015', '2016', '2017', '2018']:\n",
+    "    #for year in ['1999', '2000', '2001', '2002', '2003', '2004', '2005', '2006', '2007', '2008', '2009', '2010', '2011', '2012', '2013', '2014', '2015', '2016', '2017', '2018']:\n",
     "        csv_path = data_dir / 'lapd_news_{}.csv'.format(year)\n",
     "        if csv_path.exists():\n",
     "            t, l = load_data(csv_path)\n",
