--- a/tests/notebooks/tests/textcat.ipynb
+++ b/tests/notebooks/tests/textcat.ipynb
@@ -16,7 +16,7 @@
     "from spacy.util import minibatch, decaying, compounding\n",
     "\n",
     "use_titles = True\n",
-    "do_clean_text = True\n",
+    "do_clean_text = False\n",
     "model = 'en_core_web_sm'\n",
     "\n",
     "n_iter=30\n",
