--- a/tests/notebooks/tests/textcat.ipynb
+++ b/tests/notebooks/tests/textcat.ipynb
@@ -15,13 +15,13 @@
     "import spacy\n",
     "from spacy.util import minibatch, decaying, compounding\n",
     "\n",
-    "use_titles = True\n",
+    "use_titles = False\n",
     "do_clean_text = False\n",
     "model = 'en_core_web_sm'\n",
     "\n",
     "n_iter=30\n",
     "drop=0.3\n",
-    "score_treshold=0.7\n",
+    "score_treshold=0.6\n",
     "\n",
     "fp_texts = []\n",
     "fn_texts = []"
@@ -29,9 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Load data"
    ]
@@ -39,9 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def load_data(path):\n",
@@ -54,7 +50,7 @@
     "            texts.append(text)\n",
     "            # labels\n",
     "            raw_labels = row['labels'] # could be multiple labels per row (sparated by ';')\n",
-    "            labels = list(map(lambda label: label.strip(), raw_labels.split(';')))\n",
+    "            labels = list(map(lambda label: label.strip(), raw_labels.split('|')))\n",
     "            true_labels.append(labels)\n",
     "                \n",
     "    return texts, true_labels\n",
@@ -72,9 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Clean text"
    ]
@@ -82,9 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
@@ -251,43 +243,40 @@
       "\n",
       "loading data from '../../../data/lapd.labeled'...\n",
       "\n",
-      "cleaning texts...\n",
-      "clean texts completed.\n",
-      "\n",
       "Using 4879 examples (3903 training, 976 evaluation)\n",
       "Warning: Unnamed vectors -- this won't allow multiple vectors models to be loaded. (Shape: (0, 0))\n",
       "Training the model...\n",
       "LOSS \t  P  \t  R  \t  F  \n",
-      "135.488\t0.657\t0.632\t0.644\n",
-      "20.672\t0.657\t0.632\t0.644\n",
-      "19.160\t0.707\t0.627\t0.665\n",
-      "16.524\t0.930\t0.593\t0.724\n",
-      "14.716\t0.955\t0.579\t0.721\n",
-      "13.999\t0.968\t0.592\t0.735\n",
-      "13.485\t0.973\t0.596\t0.739\n",
-      "12.556\t0.975\t0.614\t0.753\n",
-      "11.858\t0.978\t0.654\t0.784\n",
-      "11.258\t0.981\t0.663\t0.791\n",
-      "10.608\t0.988\t0.664\t0.794\n",
-      "9.431\t0.989\t0.720\t0.834\n",
-      "8.880\t0.989\t0.734\t0.843\n",
-      "8.648\t0.988\t0.734\t0.842\n",
-      "8.536\t0.988\t0.735\t0.843\n",
-      "8.405\t0.988\t0.735\t0.843\n",
-      "8.301\t0.988\t0.736\t0.844\n",
-      "8.369\t0.989\t0.735\t0.843\n",
-      "8.311\t0.989\t0.735\t0.843\n",
-      "8.184\t0.988\t0.736\t0.844\n",
-      "8.182\t0.989\t0.736\t0.844\n",
-      "8.086\t0.991\t0.735\t0.844\n",
-      "8.195\t0.991\t0.735\t0.844\n",
-      "8.108\t0.992\t0.735\t0.844\n",
-      "8.100\t0.992\t0.735\t0.844\n",
-      "8.071\t0.992\t0.735\t0.844\n",
-      "8.059\t0.992\t0.735\t0.844\n",
-      "8.073\t0.992\t0.735\t0.844\n",
-      "8.076\t0.992\t0.735\t0.844\n",
-      "8.064\t0.992\t0.735\t0.844\n",
+      "53.666\t0.845\t0.433\t0.573\n",
+      "18.561\t0.862\t0.430\t0.574\n",
+      "16.091\t0.873\t0.462\t0.604\n",
+      "14.715\t0.866\t0.479\t0.617\n",
+      "14.119\t0.859\t0.509\t0.639\n",
+      "12.518\t0.858\t0.518\t0.646\n",
+      "11.197\t0.852\t0.546\t0.665\n",
+      "10.585\t0.849\t0.558\t0.674\n",
+      "10.097\t0.850\t0.567\t0.680\n",
+      "10.021\t0.851\t0.570\t0.682\n",
+      "9.685\t0.845\t0.567\t0.679\n",
+      "9.655\t0.841\t0.575\t0.683\n",
+      "9.561\t0.843\t0.569\t0.679\n",
+      "9.571\t0.839\t0.573\t0.681\n",
+      "9.782\t0.841\t0.564\t0.675\n",
+      "10.129\t0.848\t0.562\t0.676\n",
+      "10.139\t0.845\t0.567\t0.679\n",
+      "11.125\t0.840\t0.566\t0.676\n",
+      "10.239\t0.840\t0.569\t0.678\n",
+      "9.237\t0.841\t0.575\t0.683\n",
+      "8.586\t0.838\t0.578\t0.684\n",
+      "7.950\t0.833\t0.579\t0.683\n",
+      "7.712\t0.830\t0.582\t0.684\n",
+      "7.474\t0.830\t0.587\t0.688\n",
+      "7.528\t0.829\t0.597\t0.694\n",
+      "7.680\t0.832\t0.599\t0.697\n",
+      "7.274\t0.833\t0.599\t0.697\n",
+      "7.172\t0.834\t0.603\t0.700\n",
+      "7.089\t0.832\t0.602\t0.699\n",
+      "7.128\t0.829\t0.606\t0.700\n",
       "\n",
       "Done.\n"
      ]
